[gd_scene load_steps=9 format=3 uid="uid://dhpl8urm0uvxa"]

[ext_resource type="Script" path="res://Scripts/repair_menu.gd" id="1_cs2j1"]
[ext_resource type="FontFile" uid="uid://ccu6jholutsm4" path="res://Assets/Fonts/Chewy-Regular.ttf" id="2_j8qg3"]
[ext_resource type="Texture2D" uid="uid://ckmg4pkw65285" path="res://Assets/Items/stick.png" id="3_4jm8m"]
[ext_resource type="Texture2D" uid="uid://c3ik14rlow5yl" path="res://Assets/Items/stone.png" id="4_ue3wt"]

[sub_resource type="Animation" id="Animation_ijauc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -600)]
}

[sub_resource type="Animation" id="Animation_pmmld"]
resource_name = "TransIN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -600), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_01ybx"]
resource_name = "TransOUT"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -600)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jci3i"]
_data = {
"RESET": SubResource("Animation_ijauc"),
"TransIN": SubResource("Animation_pmmld"),
"TransOUT": SubResource("Animation_01ybx")
}

[node name="RepairMenu" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -600)
transform = Transform2D(1, 0, 0, 1, 0, -600)
script = ExtResource("1_cs2j1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.498
anchor_right = 0.5
anchor_bottom = 0.498
offset_left = -448.0
offset_top = -245.704
offset_right = 445.0
offset_bottom = 245.296
grow_horizontal = 2
grow_vertical = 2

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jci3i")
}
autoplay = "RESET"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 129.0
offset_top = 78.0
offset_right = 1014.0
offset_bottom = 567.0

[node name="close" type="Button" parent="Control"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 836.0
offset_top = 18.0
offset_right = 874.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 21
text = "X"

[node name="repairLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -445.5
offset_right = 446.5
offset_bottom = 111.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_j8qg3")
theme_override_font_sizes/font_size = 50
text = "Répare ta maison"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="cost" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 28.0
offset_top = -24.5
offset_right = 139.0
offset_bottom = 30.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_j8qg3")
theme_override_font_sizes/font_size = 45
text = "Coût "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="stone" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 623.0
offset_top = 224.0
offset_right = 842.0
offset_bottom = 283.0
theme_override_fonts/normal_font = ExtResource("2_j8qg3")
theme_override_fonts/mono_font = ExtResource("2_j8qg3")
theme_override_fonts/italics_font = ExtResource("2_j8qg3")
theme_override_fonts/bold_italics_font = ExtResource("2_j8qg3")
theme_override_fonts/bold_font = ExtResource("2_j8qg3")
theme_override_font_sizes/normal_font_size = 40
text = "x Z pierre(s)"

[node name="wood" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 251.0
offset_top = 221.0
offset_right = 468.0
offset_bottom = 280.0
theme_override_fonts/normal_font = ExtResource("2_j8qg3")
theme_override_font_sizes/bold_italics_font_size = 13
theme_override_font_sizes/normal_font_size = 40
text = "x Z bois"

[node name="wood_sprit" type="Sprite2D" parent="Control"]
position = Vector2(208, 245)
texture = ExtResource("3_4jm8m")

[node name="stones" type="Sprite2D" parent="Control"]
position = Vector2(567, 249)
texture = ExtResource("4_ue3wt")

[node name="repair" type="Button" parent="Control"]
self_modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.5
offset_top = -117.0
offset_right = 114.5
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_j8qg3")
theme_override_font_sizes/font_size = 40
text = "Réparer"

[connection signal="pressed" from="Control/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/repair" to="." method="_on_repair_pressed"]
